force-app/main/default/objects/TxnLineItems__c/TxnLineItems__c.object-meta.xml
<CustomObject>
    <description>This will give access to the Transaction Line Item Object.</description>
    <label>Transactions Line Items</label>
    <nameField>
        <label>Transactions Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transactions Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>