force-app/main/default/objects/TxnLineItems__c/fields/transactionID__c.field-meta.xml
<CustomField>
    <fullName>transactionID__c</fullName>
    <description>Links each Transaction Line Item to its parent Transaction for detailed record tracking.</description>
    <label>Transaction</label>
    <referenceTo>Transactions__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>