force-app/main/default/objects/TxnLineItems__c/fields/TxnLineItem__c.field-meta.xml
<CustomField>
    <fullName>TxnLineItem__c</fullName>
    <description>Details individual products or services within a transaction, synced from the SAP system for line-level tracking.</description>
    <displayFormat>TLI-{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>